--- a/cursoemvideo/exercicios/ex022/fundo006.html
+++ b/cursoemvideo/exercicios/ex022/fundo006.html
@@ -3,25 +3,33 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Fundo fixo de tela</title>
      
     <style>
           body{
                 height: 100vh;
-                background-color: black;
+                /*background-color: black;
                 background-image: url(imagens/wallpaper002.jpg);
                 background-position: center center;
                 background-repeat: no-repeat;
+                background-size: cover;
+                background-attachment: fixed;*/
+                /*shorthand - background
+                color > image > position > repeat > [size] > attachment*/
+
+                background: black url(imagens/wallpaper002.jpg) center center no-repeat  fixed;
                 background-size: cover;
           }
 
           main{
             background-color: white;
-            width: 400px;
+            max-width: 400px;
             padding: 10px;
             margin: auto;
             border: 1px solid darkblue;
             border-radius: 15px;
+            padding: 24px;
+            text-align: justify;
           }
 
     </style>
@@ -34,7 +42,15 @@
        <h1> Texte de Imagem de Fundo</h1>
        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quae perferendis sapiente dicta quas facilis voluptatum quaerat nobis, vitae doloremque adipisci dolor. Voluptatibus reprehenderit aut esse voluptatum. Dolorem officiis id
       Lorem, ipsum dolor sit amet consectetur adipisicing elit. Ducimus, autem! Minus, fugit earum amet, deleniti culpa ipsam dolores numquam doloremque fugiat sequi ipsa architecto rerum, repudiandae ab. Consequuntur, ab dicta. Lorem ipsum dolor, sit amet consectetur adipisicing elit. Reprehenderit, necessitatibus? Culpa similique, minus et vitae sapiente numquam impedit dolore soluta ut maxime aliquam! Ullam placeat quam fugiat consectetur sit ea.  
-    </p>
+    </p><p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quae perferendis sapiente dicta quas facilis voluptatum quaerat nobis, vitae doloremque adipisci dolor. Voluptatibus reprehenderit aut esse voluptatum. Dolorem officiis id
+        Lorem, ipsum dolor sit amet consectetur adipisicing elit. Ducimus, autem! Minus, fugit earum amet, deleniti culpa ipsam dolores numquam doloremque fugiat sequi ipsa architecto rerum, repudiandae ab. Consequuntur, ab dicta. Lorem ipsum dolor, sit amet consectetur adipisicing elit. Reprehenderit, necessitatibus? Culpa similique, minus et vitae sapiente numquam impedit dolore soluta ut maxime aliquam! Ullam placeat quam fugiat consectetur sit ea.  
+      </p><p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quae perferendis sapiente dicta quas facilis voluptatum quaerat nobis, vitae doloremque adipisci dolor. Voluptatibus reprehenderit aut esse voluptatum. Dolorem officiis id
+        Lorem, ipsum dolor sit amet consectetur adipisicing elit. Ducimus, autem! Minus, fugit earum amet, deleniti culpa ipsam dolores numquam doloremque fugiat sequi ipsa architecto rerum, repudiandae ab. Consequuntur, ab dicta. Lorem ipsum dolor, sit amet consectetur adipisicing elit. Reprehenderit, necessitatibus? Culpa similique, minus et vitae sapiente numquam impedit dolore soluta ut maxime aliquam! Ullam placeat quam fugiat consectetur sit ea.  
+      </p><p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quae perferendis sapiente dicta quas facilis voluptatum quaerat nobis, vitae doloremque adipisci dolor. Voluptatibus reprehenderit aut esse voluptatum. Dolorem officiis id
+        Lorem, ipsum dolor sit amet consectetur adipisicing elit. Ducimus, autem! Minus, fugit earum amet, deleniti culpa ipsam dolores numquam doloremque fugiat sequi ipsa architecto rerum, repudiandae ab. Consequuntur, ab dicta. Lorem ipsum dolor, sit amet consectetur adipisicing elit. Reprehenderit, necessitatibus? Culpa similique, minus et vitae sapiente numquam impedit dolore soluta ut maxime aliquam! Ullam placeat quam fugiat consectetur sit ea.  
+      </p><p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quae perferendis sapiente dicta quas facilis voluptatum quaerat nobis, vitae doloremque adipisci dolor. Voluptatibus reprehenderit aut esse voluptatum. Dolorem officiis id
+        Lorem, ipsum dolor sit amet consectetur adipisicing elit. Ducimus, autem! Minus, fugit earum amet, deleniti culpa ipsam dolores numquam doloremque fugiat sequi ipsa architecto rerum, repudiandae ab. Consequuntur, ab dicta. Lorem ipsum dolor, sit amet consectetur adipisicing elit. Reprehenderit, necessitatibus? Culpa similique, minus et vitae sapiente numquam impedit dolore soluta ut maxime aliquam! Ullam placeat quam fugiat consectetur sit ea.  
+      </p>
 
 
     </main>
